--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "twilio": "^4.19.0"
+    "twilio": "^4.19.0",
+    "web3": "^4.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
